Sources/sdk/sccio.h

  /*
  |  Structures passed to IOOPEN function
  */

typedef struct IOSPECMACHFStag
{
    short       vRefNum;
    VTLONG      dirId;
    VTTCHAR     fileName[256];
} IOSPECMACHFS, * PIOSPECMACHFS;
typedef struct IOSPECRANGEtag
{
    HIOFILE     hRefFile;
#ifdef SCCFEATURE_64BITIO
    VTOFF_T       dwFirstByte;
    VTOFF_T       dwLastByte;
#else
    VTDWORD     dwFirstByte;
    VTDWORD     dwLastByte;
#endif
} IOSPECRANGE, * PIOSPECRANGE;
typedef struct IOSPECCOMPRESStag
{
    HIOFILE     hRefFile;
    VTDWORD     dwFlags;
    VTDWORD     dwType;         /* type of compression */
    VTDWORD     dwReserved1;
    VTDWORD     dwReserved2;
    VTDWORD     dwReserved3;
    VTSYSVAL    pResPointer1;
} IOSPECCOMPRESS, * PIOSPECCOMPRESS;
typedef struct IOSPECSECONDARYtag
{
    HIOFILE     hRefFile;
    VTTCHAR     szFileName[256];
} IOSPECSECONDARY, * PIOSPECSECONDARY;
typedef struct IOSPECSUBSTREAMtag
{
    HIOFILE     hRefStorage;
    VTTCHAR     szStreamName[256];
} IOSPECSUBSTREAM, * PIOSPECSUBSTREAM;
typedef struct IOSPECSUBSTORAGEtag
{
    HIOFILE     hRefStorage;
    VTTCHAR     szStorageName[256];
} IOSPECSUBSTORAGE, * PIOSPECSUBSTORAGE;
typedef struct IOSPECMROOTSTORAGEtag
{
    /* Through NTFS, the maximum filename size is 255 UNICODE
    * characters plus the terminator.
    */
    HIOFILE     hRefFile;
    VTTCHAR     szFileName[512];
    VTDWORD     dwFlags;
}
IOSPECMROOTSTORAGE, * PIOSPECMROOTSTORAGE;
typedef struct IOSPECMSTREAMtag
{
    HIOFILE     hRefStorage;
    /* Maximum stream name size is 31 UNICODE characters
    * plus the terminator.
    */
    VTTCHAR     szStreamName[256];
}
IOSPECMSTREAM, * PIOSPECMSTREAM;
typedef struct IOSPECMSTORAGEtag
{
    HIOFILE     hRefStorage;
    /* Maximum storage name size is 31 UNICODE characters
    * plus the terminator.
    */
    VTTCHAR     szStorageName[256];
}
IOSPECMSTORAGE, * PIOSPECMSTORAGE;
/* Parameters to the IOGetInfo() / IOSetInfo() calls for Microsoft OLE2. */
#define IOSETINFO_OLE2CLSID  1
typedef struct IOSPECOLE2ROOTSTORAGEtag
        {
        HIOFILE     hRefFile;
        VTTCHAR     szFileName[512];
        VTDWORD     dwFlags;
        } IOSPECOLE2ROOTSTORAGE, * PIOSPECOLE2ROOTSTORAGE;
typedef struct IOSPECOLE2STREAMtag
        {
        HIOFILE     hRefStorage;
        VTTCHAR     szStreamName[256];
        } IOSPECOLE2STREAM, * PIOSPECOLE2STREAM;
typedef struct IOSPECOLE2STORAGEtag
        {
        HIOFILE     hRefStorage;
        VTTCHAR     szStorageName[256];
        } IOSPECOLE2STORAGE, * PIOSPECOLE2STORAGE;
/* used to access items in zip archive files,
 * added for MS Office 12 support */
typedef struct IOSPECZIPNODEtag
{
    HIOFILE                 hRefFile;   /* zip file (block I/O) */

    VTCHAR                  szNodeName[512];
} IOSPECZIPNODE, * PIOSPECZIPNODE;
  /*
  |  Structure used for specifying the date and time of a file.
  */
typedef struct IODATETIMEtag
{
    VTDWORD         dwYear;     /* Year A.D. */
    VTDWORD         dwMonth;    /* Month, Jan == 1 */
    VTDWORD         dwDay;      /* Day of month */
    VTDWORD         dwTime;     /* Number of miliseconds since midnight */
}IODATETIME, * PIODATETIME;
typedef struct IORFAREQUESTtag
{
    VTDWORD     dwReserved1;
    VTDWORD     dwReserved2;
    VTDWORD     dwReserved3;
    VTDWORD     dwReserved4;
} IORFAREQUEST, * PIORFAREQUEST;
typedef IOERR (IO_ENTRYMODPTR IOGETREMOTEDATAPROC) (HIOFILE hFile, PIORFAREQUEST pRequest, VTVOID * *ppData, VTDWORD *pdwDataSize);
typedef IOERR (IO_ENTRYMODPTR IOCLOSEREMOTEDATAPROC)(HIOFILE hFile);
typedef IOERR (IO_ENTRYMODPTR IOOPENREMOTESUBOBJECTPROC)(HIOFILE hFile, VTDWORD dwObjectId, VTDWORD dwStreamId, VTDWORD dwReserved1, VTDWORD dwReserved2, VTDWORD * pdwSpecType, VTVOID * *pSpec);
/*********************************************************************/
/*********************************************************************/
 /*
  |   Macros
  */
#define IOOpenVia(a,b,c,d,e) ((PBASEIO)(a))->pOpen(b,c,d,e)
#define IOClose(a)           ((PBASEIO)(a))->pClose(a)
#define IORead(a,b,c,d)      ((PBASEIO)(a))->pRead(a,(VTBYTE *)b,c,d)
#define IOWrite(a,b,c,d)     ((PBASEIO)(a))->pWrite(a,(VTBYTE *)b,c,d)
#define IOSeek(a,b,c)        ((PBASEIO)(a))->pSeek(a,b,c)
#define IOTell(a,b)          ((PBASEIO)(a))->pTell(a,b)
#define IOGetInfo(a,b,c)     ((PBASEIO)(a))->pGetInfo(a,b,c)
#define IOSeek64(a,b,c)      ((PBASEIO)(a))->pSeek64(a,b,c)
#define IOTell64(a,b)        ((PBASEIO)(a))->pTell64(a,b)
  /*
  |   Functions
  */
IO_ENTRYSC IOERR IO_ENTRYMOD IOCreate(HIOFILE * phFile, VTDWORD dwType, VTVOID * pSpec, VTDWORD dwFlags);
IO_ENTRYSC IOERR IO_ENTRYMOD IOOpen(HIOFILE * phFile, VTDWORD dwType, VTVOID * pSpec, VTDWORD dwFlags);
IO_ENTRYSC IOERR IO_ENTRYMOD IOSetFileTime(HIOFILE hFile, PIODATETIME pDate, VTDWORD dwFlags);
IO_ENTRYSC IOERR IO_ENTRYMOD IODelete(VTDWORD dwType, VTVOID * pSpec, VTDWORD dwFlags);
IO_ENTRYSC IOERR IO_ENTRYMOD IOGetTempFullUnicodeFileName(VTLPWORD pwszFileName);
IO_ENTRYSC IOERR IO_ENTRYMOD IOGetTempFullFileName(VTLPTSTR pszFileName, VTDWORD dwSpecType);
IO_ENTRYSC VTDWORD IO_ENTRYMOD IOMapIOERR(IOERR ieCode);
  /*
  |  Structure used to access the internal storage of file specifications.
  |  Note: This type of structure is never passed into the IO routines
  |  but is used to marshall IO specs into a single data block
  |
  |  Note: The Mac FSSpec structure is only available on the Mac
  |
  */

typedef struct IOSPECtag
{
  VTDWORD  dwSignature;
  VTDWORD  dwSize;
  VTDWORD  dwType;
  union
  {
    VTBYTE             szDosPath[1];
    VTBYTE             szAnsiPath[1];
    VTBYTE             szMacPath[1];
    VTBYTE             szUnixPath[1];
    VTWORD             szUnicodePath[1];
    IOSPECMACHFS       sMacHfs;
    IOSPECRANGE        sRange;
    IOSPECCOMPRESS     sCompress;
    VTTCHAR            szTempPrefix[1];
    VTBYTE             aGen[1];
    IOSPECSECONDARY    sSecondary;
    IOSPECSUBSTREAM    sSubStream;
    IOSPECSUBSTORAGE   sSubStorage;
    /* Writable OLE2 Microsoft */
    IOSPECMROOTSTORAGE sMRootStorage;
    IOSPECMSTORAGE     sMStorage;
    IOSPECMSTREAM      sMStream;
    /* Writable OLE2 native */
    IOSPECOLE2ROOTSTORAGE sOLE2RootStorage;
    IOSPECOLE2STREAM   sOLE2Stream;
    IOSPECOLE2STORAGE  sOLE2Storage;
    IOSPECZIPNODE      sZipNode;
    PBASEIO            pRedirect;
  } uTypes;
} IOSPEC, * PIOSPEC;
typedef VTHANDLE HIOSPEC;
#define IO_IOSPEC_SIGNATURE  0x10FED3F1
IO_ENTRYSC IOERR IO_ENTRYMOD IOAllocSpec(VTDWORD dwType, VTVOID *  pSpec, VTHANDLE * phSpec);
/* Added for writable ole2. */
IO_ENTRYSC IOERR IO_ENTRYMOD IOSetInfo(HIOFILE hFile, VTDWORD dwType, VTDWORD dwInfoId, VTVOID * pInfo);
/* dwInfoId parameters for IOSetInfo(). */
#define IOSETINFO_OLE2CLSID           1
#define IOSETINFO_CASESENSITIVITY     2
  /*
  |  Structure used to retrieve Class IDs of OLE2 files.
  */

typedef struct SCCOLE2CLSIDtag
{
  VTDWORD Data1;
  VTWORD  Data2;
  VTWORD  Data3;
  VTBYTE  Data4[8];
} SCCOLE2CLSID, * PSCCOLE2CLSID;