Sources/sccio.pas


  { was #define dname(params) para_def_expr }
  { argument types are unknown }
  { return type might be wrong }   
  function IOTell64(a,b : longint) : longint;  
{$endif}
  {
    |   Functions
  }
  function IOCreate(var phFile:HIOFILE; dwType:VTDWORD; pSpec: Pointer; dwFlags:VTDWORD):IOERR;cdecl;external External_library name 'IOCreate';
  function IOOpen(var phFile:HIOFILE; dwType:VTDWORD; Spec: Pointer; dwFlags:VTDWORD):IOERR;cdecl;external External_library name 'IOOpen';
  function IOSetFileTime(hFile:HIOFILE; pDate:PIODATETIME; dwFlags:VTDWORD):IOERR;cdecl;external External_library name 'IOSetFileTime';
  function IODelete(dwType:VTDWORD; pSpec: Pointer; dwFlags:VTDWORD):IOERR;cdecl;external External_library name 'IODelete';
  function IOGetTempFullUnicodeFileName(pwszFileName:VTLPWORD):IOERR;cdecl;external External_library name 'IOGetTempFullUnicodeFileName';
  function IOGetTempFullFileName(pszFileName:VTLPTSTR; dwSpecType:VTDWORD):IOERR;cdecl;external External_library name 'IOGetTempFullFileName';
  function IOMapIOERR(ieCode:IOERR):VTDWORD;cdecl;external External_library name 'IOMapIOERR';

  {
    |  Structure used to access the internal storage of file specifications.
    |  Note: This type of structure is never passed into the IO routines
    |  but is used to marshall IO specs into a single data block
    |
    |  Note: The Mac FSSpec structure is only available on the Mac
    |
     }
  { Writable OLE2 Microsoft  }
  { Writable OLE2 native  }

  type

     PIOSPEC = ^IOSPEC;
     IOSPEC = record
          dwSignature : VTDWORD;
          dwSize : VTDWORD;
          dwType : VTDWORD;
          uTypes : record
              case longint of
                 0 : ( szDosPath : array[0..0] of VTBYTE );
                 1 : ( szAnsiPath : array[0..0] of VTBYTE );
                 2 : ( szMacPath : array[0..0] of VTBYTE );
                 3 : ( szUnixPath : array[0..0] of VTBYTE );
                 4 : ( szUnicodePath : array[0..0] of VTWORD );
                 5 : ( sMacHfs : IOSPECMACHFS );
                 6 : ( sRange : IOSPECRANGE );
                 7 : ( sCompress : IOSPECCOMPRESS );
                 8 : ( szTempPrefix : array[0..0] of VTTCHAR );
                 9 : ( aGen : array[0..0] of VTBYTE );
                 10 : ( sSecondary : IOSPECSECONDARY );
                 11 : ( sSubStream : IOSPECSUBSTREAM );
                 12 : ( sSubStorage : IOSPECSUBSTORAGE );
                 13 : ( sMRootStorage : IOSPECMROOTSTORAGE );
                 14 : ( sMStorage : IOSPECMSTORAGE );
                 15 : ( sMStream : IOSPECMSTREAM );
                 16 : ( sOLE2RootStorage : IOSPECOLE2ROOTSTORAGE );
                 17 : ( sOLE2Stream : IOSPECOLE2STREAM );
                 18 : ( sOLE2Storage : IOSPECOLE2STORAGE );
                 19 : ( sZipNode : IOSPECZIPNODE );
                 20 : ( pRedirect : PBASEIO );
              end;
       end;
     PPIOSPEC = ^PIOSPEC;

     PHIOSPEC = ^HIOSPEC;
     HIOSPEC = VTHANDLE;

  const
     IO_IOSPEC_SIGNATURE = $10FED3F1;     
  {__export  }  { __cdecl  }
  function IOAllocSpec(dwType:VTDWORD; pSpec: Pointer; var phSpec:VTHANDLE):IOERR;cdecl;external External_library name 'IOAllocSpec';

  { Added for writable ole2.  }
  {__export  }  { __cdecl  }  function IOSetInfo(hFile:HIOFILE; dwType:VTDWORD; dwInfoId:VTDWORD; pInfo: Pointer):IOERR;cdecl;external External_library name 'IOSetInfo';

  { dwInfoId parameters for IOSetInfo().  }

  const
     IOSETINFO_OLE2CLSID = 1;
     IOSETINFO_CASESENSITIVITY = 2;
  {
    |  Structure used to retrieve Class IDs of OLE2 files.
     }

  type

     PSCCOLE2CLSID = ^SCCOLE2CLSID;
     SCCOLE2CLSID = record
          Data1 : VTDWORD;
          Data2 : VTWORD;
          Data3 : VTWORD;
          Data4 : array[0..7] of VTBYTE;
       end;
     PPSCCOLE2CLSID = ^PSCCOLE2CLSID;

implementation

//  function IOOpenVia(a,b,c,d,e : longint) : longint;
//  begin
//   IOOpenVia:=a^.pOpen(b,c,d,e);
//  end;
//
//  function IOClose(a : longint) : longint;
//  begin
//     IOClose:=(PBASEIO(a))^.(pClose(a));
//  end;
//
//  { was #define dname(params) para_def_expr }
//  { argument types are unknown }
//  { return type might be wrong }
//  function IORead(a,b,c,d : longint) : longint;
//    begin
//       IORead:=(PBASEIO(a))^.(pRead(a,PVTBYTE(b),c,d));
//    end;
//
//  { was #define dname(params) para_def_expr }
//  { argument types are unknown }
//  { return type might be wrong }
//  function IOWrite(a,b,c,d : longint) : longint;
//    begin
//       IOWrite:=(PBASEIO(a))^.(pWrite(a,PVTBYTE(b),c,d));
//    end;
//
//  { was #define dname(params) para_def_expr }
//  { argument types are unknown }
//  { return type might be wrong }
//  function IOSeek(a,b,c : longint) : longint;
//    begin
//       IOSeek:=(PBASEIO(a))^.(pSeek(a,b,c));
//    end;
//
//  { was #define dname(params) para_def_expr }
//  { argument types are unknown }
//  { return type might be wrong }
//  function IOTell(a,b : longint) : longint;
//    begin
//       IOTell:=(PBASEIO(a))^.(pTell(a,b));
//    end;
//
//  { was #define dname(params) para_def_expr }
//  { argument types are unknown }
//  { return type might be wrong }
//  function IOGetInfo(a,b,c : longint) : longint;
//    begin
//       IOGetInfo:=(PBASEIO(a))^.(pGetInfo(a,b,c));
//    end;
//
//  { was #define dname(params) para_def_expr }
//  { argument types are unknown }
//  { return type might be wrong }
//  function IOSeek64(a,b,c : longint) : longint;
//    begin
//       IOSeek64:=(PBASEIO(a))^.(pSeek64(a,b,c));
//    end;
//
//  { was #define dname(params) para_def_expr }
//  { argument types are unknown }
//  { return type might be wrong }
//  function IOTell64(a,b : longint) : longint;
//    begin
//       IOTell64:=(PBASEIO(a))^.(pTell64(a,b));
//    end;

end.
